fix: viewport on mobile device change background image to https

--- a/src/styles/styleguide.css
+++ b/src/styles/styleguide.css
@@ -228,3 +228,12 @@
     font-weight: 300;
     font-family: 'Roboto'
 }
+
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+}
+
+@-ms-viewport {
+    width: device-width ;
+}
